Fixed header padding on mobile

--- a/frontend/src/styles/loading.scss
+++ b/frontend/src/styles/loading.scss
@@ -98,6 +98,10 @@
                 display: flex;
                 flex-direction: column;
                 text-align: center;
+
+                &__main {
+                    padding-right: 0;
+                }
             }
         }
     }
